--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,7 @@ jobs:
                 name: Docker Login
                 uses: docker/build-push-action@v5
                 with:
+                    dockerfile: Dockerfile
                     context: .
                     push: true
                     tags: blueninjas/planet:latest
